--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "postinstall": "lerna bootstrap"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^2.8.0",
     "@sanity/image-url": "^0.140.19",
     "classnames": "^2.2.6",
     "date-fns": "^2.15.0",
+    "google-map-react": "^2.1.10",
     "next": "^10.2.0",
     "next-sanity": "^0.1.5",
     "react": "^17.0.2",
@@ -28,6 +31,6 @@
     "@sanity/cli": "^2.0.5",
     "lerna": "^4.0.0",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^2.2.19"
   }
 }
