--- a/studio/package.json
+++ b/studio/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.3.6",
     "sanity-plugin-asset-source-unsplash": "^0.1.3",
+    "sanity-plugin-simple-star-rating": "^0.1.6",
     "styled-components": "^5.3.3"
   }
 }
