--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
         "@sanity/block-content-to-react": "^2.0.7",
         "@sanity/client": "^2.8.0",
         "@sanity/image-url": "^0.140.19",
+        "@tailwindcss/aspect-ratio": "^0.3.0",
+        "autoprefixer": "^10.4.0",
         "classnames": "^2.2.6",
         "date-fns": "^2.15.0",
         "google-map-react": "^2.1.10",
-        "next": "^10.2.0",
+        "next": "10.2.0",
         "next-sanity": "^0.1.5",
+        "postcss": "^8.3.11",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.3.6",
