--- a/studio/package.json
+++ b/studio/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "mysanityproject",
-  "private": true,
-  "version": "1.0.0",
-  "description": "",
-  "main": "package.json",
-  "author": "Knut Melvær <knut@sanity.io>",
-  "license": "UNLICENSED",
-  "keywords": [
-    "sanity"
-  ],
-  "dependencies": {
-    "@sanity/base": "^2.21.10",
-    "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.21.11",
-    "@sanity/default-layout": "^2.21.10",
-    "@sanity/default-login": "^2.21.10",
-    "@sanity/desk-tool": "^2.21.10",
-    "@sanity/vision": "^2.21.10",
-    "prop-types": "^15.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.3.6",
-    "sanity-plugin-asset-source-unsplash": "^0.1.3",
-    "sanity-plugin-simple-star-rating": "^0.1.6",
-    "styled-components": "^5.3.3"
-  }
+    "name": "mysanityproject",
+    "private": true,
+    "version": "1.0.0",
+    "description": "",
+    "main": "package.json",
+    "author": "Knut Melvær <knut@sanity.io>",
+    "license": "MIT",
+    "keywords": [
+        "sanity"
+    ],
+    "dependencies": {
+        "@sanity/base": "^2.21.10",
+        "@sanity/components": "^2.14.0",
+        "@sanity/core": "^2.21.11",
+        "@sanity/default-layout": "^2.21.10",
+        "@sanity/default-login": "^2.21.10",
+        "@sanity/desk-tool": "^2.21.10",
+        "@sanity/vision": "^2.21.10",
+        "prop-types": "^15.6",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-hook-form": "^7.3.6",
+        "sanity-plugin-asset-source-unsplash": "^0.1.3",
+        "sanity-plugin-simple-star-rating": "^0.1.6",
+        "styled-components": "^5.3.3"
+    }
 }
