--- a/studio/package.json
+++ b/studio/package.json
@@ -22,6 +22,9 @@
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.3.6",
         "sanity-plugin-asset-source-unsplash": "^0.1.3",
+        "sanity-plugin-content-calendar": "^1.2.2",
+        "sanity-plugin-dark-mode": "^0.0.32",
+        "sanity-plugin-dark-theme-blue": "^1.0.1",
         "sanity-plugin-simple-star-rating": "^0.1.6",
         "styled-components": "^5.3.3"
     }
