--- a/studio/package.json
+++ b/studio/package.json
@@ -13,6 +13,7 @@
         "@sanity/base": "^2.21.10",
         "@sanity/components": "^2.14.0",
         "@sanity/core": "^2.21.11",
+        "@sanity/dashboard": "^2.22.0",
         "@sanity/default-layout": "^2.21.10",
         "@sanity/default-login": "^2.21.10",
         "@sanity/desk-tool": "^2.21.10",
@@ -21,10 +22,10 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.3.6",
+        "react-icons": "^4.3.1",
         "sanity-plugin-asset-source-unsplash": "^0.1.3",
         "sanity-plugin-content-calendar": "^1.2.2",
-        "sanity-plugin-dark-mode": "^0.0.32",
-        "sanity-plugin-dark-theme-blue": "^1.0.1",
+        "sanity-plugin-media": "^1.4.4",
         "sanity-plugin-simple-star-rating": "^0.1.6",
         "styled-components": "^5.3.3"
     }
