--- a/studio/package.json
+++ b/studio/package.json
@@ -23,7 +23,7 @@
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.3.6",
         "react-icons": "^4.3.1",
-        "sanity-plugin-asset-source-unsplash": "^0.1.3",
+        "rxjs-compat": "^6.6.7",
         "sanity-plugin-content-calendar": "^1.2.2",
         "sanity-plugin-media": "^1.4.4",
         "sanity-plugin-simple-star-rating": "^0.1.6",
