--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "date-fns": "^2.15.0",
         "next": "10.2.0",
         "next-sanity": "^0.1.5",
+        "postcss-flexbugs-fixes": "^5.0.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.3.6",
