Landing page edits, studio menu item field rearrangment

--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
         "postcss-flexbugs-fixes": "^5.0.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-fast-marquee": "^1.2.1",
         "react-hook-form": "^7.3.6",
         "react-icons": "^4.3.1",
         "react-star-ratings": "^2.3.0",
-        "react-ticker": "^1.2.2",
         "swr": "^0.5.5"
     },
     "devDependencies": {
