--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-fast-marquee": "^1.2.1",
         "react-hook-form": "^7.3.6",
         "react-icons": "^4.3.1",
+        "react-messenger-customer-chat": "^0.8.0",
         "react-star-ratings": "^2.3.0",
         "swr": "^0.5.5"
     },
