--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-fast-marquee": "^1.2.1",
+        "react-flickity-component": "^3.6.2",
         "react-hook-form": "^7.3.6",
         "react-icons": "^4.3.1",
         "react-messenger-customer-chat": "^0.8.0",
